Fixed button overlapping issue in add question panel component

--- a/src/web/app/components/adding-question-panel/adding-question-panel.component.scss
+++ b/src/web/app/components/adding-question-panel/adding-question-panel.component.scss
@@ -1,3 +1,9 @@
 .background-color-light-blue {
   background-color: #EAEFF5;
 }
+
+@media(max-width: 411px) {
+  .button {
+    margin-top: 1%;
+  }
+}
